fixed bug where collapsing sections wouldn't move next card sufficiently

--- a/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectColumn.css
+++ b/autoscheduler/frontend/src/components/SchedulingPage/CourseSelectColumn/CourseSelectColumn.css
@@ -45,7 +45,6 @@
 
 .expanded-row {
     overflow-y: hidden;
-    min-height: 600px;
 }
 
 .expanded-row-small {
